--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.astromtrading.retrofit">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Retrofit">
-        <activity android:name=".GetAllUsers"></activity>
+        android:theme="@style/Theme.Retrofit"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".FormUser"></activity>
+        <activity android:name=".GetAllUsers" />
         <activity android:name=".LoginSuccessful" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,5 +21,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
